--- a/app-clientes/index.html
+++ b/app-clientes/index.html
@@ -100,13 +100,15 @@
               </table>
               <h5>Direccion</h5>
               <form id="frmDireccion">
+                <input type="hidden" name="idCliente">
+                <input type="hidden" name="idDireccion">
                 <div class="row">
                   <div class="col">
                     <div class="input-group mb-3">
                       <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">direccion</span>
                       </div>
-                      <input type="text" class="form-control" id="direccion" name="direccion" placeholder="05361784-6" aria-label="Username" aria-describedby="basic-addon1">
+                      <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                   </div>
                   <div class="col">
@@ -119,7 +121,7 @@
                   </div>
                 </div>
                 <div class="row mt-1 mb-3 ml-1 align-item-right">
-                  <button type="button" class="btn btn-primary btnguardarDireccion" id="idguardarDireccion"> Guardar Direccion </button>
+                  <button type="button" class="btn btn-primary" name="guardarDireccion" id="guardarDireccion"> Guardar Direccion </button>
                 </div>
               </form>
               <table class="table table-striped table-holder">
