correccion de respuesta

--- a/app-clientes/index.html
+++ b/app-clientes/index.html
@@ -33,7 +33,7 @@
               <div class="col-md-4 mb-4"><input type="text" class="input-bottom " id="nombres" name="nombres" placeholder="Ingrese Nombres"></div>
               <div class="col-md-4 mb-4"><input type="text" class="input-bottom" id="apellidos" name="apellidos" placeholder="Ingrese Apellidos"></div>
               <div class="col-md-2"><button type="button" class="btn btn-primary" id="guardarCliente" name="guardarCliente">Aceptar</button></div>
-              <div class="col-md-2"><button type="button" class="btn btn-success">Generar PDF</button></div>
+              <div class="col-md-2"><button type="button" class="btn btn-success">Generar Excel</button></div>
             </div>
           </form>
         </div>
