--- a/app-clientes/index.html
+++ b/app-clientes/index.html
@@ -27,12 +27,12 @@
       <div class="p-4">
         <h2 class="featurette-heading mt-0">Registro de Clientes</h2>
         <div class="mt-4 mb-4">
-          <form id="frmCliente">
+          <form id="frmCliente" autocomplete="off" onsubmit="return false;">
             <div class="row">
               <input type="hidden" name="idCliente">
-              <div class="col-md-4 mb-4"><input type="text" class="input-bottom " id="nombres" name="nombres" placeholder="Ingrese Nombres"></div>
-              <div class="col-md-4 mb-4"><input type="text" class="input-bottom" id="apellidos" name="apellidos" placeholder="Ingrese Apellidos"></div>
-              <div class="col-md-2"><button type="button" class="btn btn-primary" id="guardarCliente" name="guardarCliente">Aceptar</button></div>
+              <div class="col-md-4 mb-4"><input type="text" class="input-bottom " id="nombres" name="nombres" placeholder="Ingrese Nombres" required="true"></div>
+              <div class="col-md-4 mb-4"><input type="text" class="input-bottom" id="apellidos" name="apellidos" placeholder="Ingrese Apellidos" required="true"></div>
+              <div class="col-md-2"><button type="submit" class="btn btn-primary" id="guardarCliente" name="guardarCliente" form="frmCliente">Aceptar</button></div>
               <div class="col-md-2"><button type="button" class="btn btn-success">Generar Excel</button></div>
             </div>
           </form>
@@ -63,7 +63,7 @@
             <!-- Modal body -->
             <div class="modal-body">
               <h5>Documentos</h5>
-              <form id="frmDocumento" name="frmDocumento">
+              <form id="frmDocumento" autocomplete="off" onsubmit="return false;">
                 <input type="hidden" name="idCliente">
                 <input type="hidden" name="idDocumento">
                 <div class="row">
@@ -72,7 +72,7 @@
                       <div class="input-group-prepend">
                         <label class="input-group-text" for="inputGroupSelect01">Tipo</label>
                       </div>
-                      <select class="custom-select" id="idTipoDocumento" name="idTipoDocumento"></select>
+                      <select class="custom-select" id="idTipoDocumento" name="idTipoDocumento" required="true"></select>
                     </div>
                   </div>
                   <div class="col">
@@ -80,12 +80,12 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">Numero</span>
                       </div>
-                      <input type="text" class="form-control" id="numeroDocumento" name="numeroDocumento" placeholder="05361784-6" aria-label="Username" aria-describedby="basic-addon1">
+                      <input type="text" class="form-control" id="numeroDocumento" name="numeroDocumento" placeholder="05361784-6" aria-label="Username" aria-describedby="basic-addon1" required="true">
                     </div>
                   </div>
                 </div>
                 <div class="row mt-1 mb-3 ml-1 align-item-right">
-                  <button type="button" class="btn btn-primary" name="guardarDocumento" id="guardarDocumento"> Guardar Documento </button>
+                  <button type="submit" class="btn btn-primary" name="guardarDocumento" id="guardarDocumento" form="frmDocumento"> Guardar Documento </button>
                 </div>
               </form>
               <table class="table table-striped table-holder">
@@ -99,7 +99,7 @@
                 </tbody>
               </table>
               <h5>Direccion</h5>
-              <form id="frmDireccion">
+              <form id="frmDireccion" autocomplete="off" onsubmit="return false;">
                 <input type="hidden" name="idCliente">
                 <input type="hidden" name="idDireccion">
                 <div class="row">
@@ -108,7 +108,7 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">direccion</span>
                       </div>
-                      <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion" aria-label="Username" aria-describedby="basic-addon1">
+                      <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Direccion" aria-label="Username" aria-describedby="basic-addon1" required="true">
                     </div>
                   </div>
                   <div class="col">
@@ -116,12 +116,12 @@
                       <div class="input-group-prepend">
                         <label class="input-group-text" for="inputGroupSelect01">Municipio</label>
                       </div>
-                      <select class="custom-select" id="idMunicipio" name="idMunicipio"></select>
+                      <select class="custom-select" id="idMunicipio" name="idMunicipio" required="true"></select>
                     </div>
                   </div>
                 </div>
                 <div class="row mt-1 mb-3 ml-1 align-item-right">
-                  <button type="button" class="btn btn-primary" name="guardarDireccion" id="guardarDireccion"> Guardar Direccion </button>
+                  <button type="submit" class="btn btn-primary" name="guardarDireccion" id="guardarDireccion" form="frmDireccion"> Guardar Direccion </button>
                 </div>
               </form>
               <table class="table table-striped table-holder">
